name:                advent-of-code
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Magnus Stavngaard
maintainer:          magnus@stavngaard.dk
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable day1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       semigroups >=0.18.3,
                       text >=1.2.2.1
  hs-source-dirs:      day_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day3
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_3
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day4
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_4
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day5
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       containers >=0.5.6.2,
                       mtl >=2.2.1,
                       monad-loops >=0.4.3
  hs-source-dirs:      day_5
  GHC-Options:         -Wall
  default-language:    Haskell2010
