name:                advent-of-code
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Magnus Stavngaard
maintainer:          magnus@stavngaard.dk
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable day1_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_1/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day1_2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_1/assignment_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day2_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_2/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day2_2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_2/assignment_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day3_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_3/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day3_2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_3/assignment_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day4_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_4/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day4_2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_4/assignment_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day5_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       containers >=0.5.6.2,
                       mtl >=2.2.1,
                       monad-loops >=0.4.3
  hs-source-dirs:      day_5/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day5_2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       containers >=0.5.6.2,
                       mtl >=2.2.1,
                       monad-loops >=0.4.3
  hs-source-dirs:      day_5/assignment_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day6_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       mtl >=2.2.1,
                       containers >=0.5.6.2,
                       monad-loops >=0.4.3,
                       vector >=0.12.0.1
  hs-source-dirs:      day_6/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010
