name:                advent-of-code
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Magnus Stavngaard
maintainer:          magnus@stavngaard.dk
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable day1_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_01/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day1_2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_01/assignment_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day2_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_02/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day2_2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_02/assignment_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day3_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_03/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day3_2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_03/assignment_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day4_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_04/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day4_2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_04/assignment_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day5_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       containers >=0.5.6.2,
                       mtl >=2.2.1,
                       monad-loops >=0.4.3
  hs-source-dirs:      day_05/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day5_2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       containers >=0.5.6.2,
                       mtl >=2.2.1,
                       monad-loops >=0.4.3
  hs-source-dirs:      day_05/assignment_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day6_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       mtl >=2.2.1,
                       containers >=0.5.6.2,
                       monad-loops >=0.4.3,
                       vector >=0.12.0.1
  hs-source-dirs:      day_06/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day6_2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       mtl >=2.2.1,
                       monad-loops >=0.4.3,
                       vector >=0.12.0.1
  hs-source-dirs:      day_06/assignment_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day7_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      day_07/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day7_2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       parsec >=3.0,
                       parsec3-numbers >=0.1.0,
                       extra >=1.5.3
  hs-source-dirs:      day_07/assignment_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day8_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       containers >=0.5.6.2,
                       parsec >=3.0,
                       parsec3-numbers >=0.1.0
  hs-source-dirs:      day_08/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day8_2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       containers >=0.5.6.2,
                       parsec >=3.0,
                       parsec3-numbers >=0.1.0
  hs-source-dirs:      day_08/assignment_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day9_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       parsec >=3.0
  hs-source-dirs:      day_09/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day9_2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       parsec >=3.0
  hs-source-dirs:      day_09/assignment_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day10_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       mtl >=2.2.1,
                       vector >=0.12.0.1,
                       split >=0.2.3.2
  hs-source-dirs:      day_10/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day10_2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       mtl >=2.2.1,
                       vector >=0.12.0.1,
                       split >=0.2.3.2
  hs-source-dirs:      day_10/assignment_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day11_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       split >=0.2.3.2
  hs-source-dirs:      day_11/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day11_2
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       split >=0.2.3.2
  hs-source-dirs:      day_11/assignment_2
  GHC-Options:         -Wall
  default-language:    Haskell2010

executable day12_1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       containers >=0.5.6.2,
                       mtl >=2.2.1,
                       parsec >=3.0,
                       parsec3-numbers >=0.1.0,
                       monad-loops >=0.4.3
  hs-source-dirs:      day_12/assignment_1
  GHC-Options:         -Wall
  default-language:    Haskell2010
